src/test/ui/if/if-let-arm-types.stderr
error[E0308]: if and else have incompatible types
  --> $DIR/if-let-arm-types.rs:7:9
   |
LL | /     if let Some(b) = None {
LL | |
LL | |         ()
   | |         -- expected because of this
LL | |
LL | |     } else {
LL | |         1
   | |         ^ expected (), found integer
LL | |     };
   | |_____- if and else have incompatible types
   |
   = note: expected type `()`
              found type `{integer}`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
